Fix for collapsed width in nested components

--- a/test/width.collapse.expect.css
+++ b/test/width.collapse.expect.css
@@ -1,3 +1,4 @@
 .w_collapse {
 	flex-grow: 0;
+	--grow: 0 !important;
 }
